corrected menu alignment

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,12 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
-body {
-  min-height: 100vh;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
 /* ============================================= */
 /*                CSS variables                  */
 /* ============================================= */
@@ -27,6 +18,19 @@ body {
   --background: white;
   --main-font: "Sora", "Aileron SemiBold", sans-serif;
   --main-title-color: rgba(1, 30, 212, 1);
+}
+
+/* ============================================= */
+/*               General Elements                */
+/* ============================================= */
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  min-height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 /* ============================================= */
@@ -86,20 +90,20 @@ body {
   width: 0;
 }
 
-hamburger-nav ul {
+.hamburger-nav ul {
   width: 100%;
   list-style: none;
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
   align-items: center;
+  padding-top: 5rem;
 }
 
-hamburger-nav li {
-  height: 50px;
+.hamburger-nav li {
+  height: 10px;
 }
 
-hamburger-nav a {
-  height: 100%;
+.hamburger-nav a {
   padding: 0 30px;
   text-decoration: none;
   display: flex;
@@ -107,7 +111,7 @@ hamburger-nav a {
   color: black;
 }
 
-hamburger-nav a:hover {
+.hamburger-nav a:hover {
   background-color: #f0f0f0;
 }
 
@@ -126,7 +130,6 @@ hamburger-nav a:hover {
   justify-content: flex-start;
   text-align: center;
   padding-left: 0;
-  padding-top: 5rem;
   transition: translate var(--animation-timing-sidebar);
   translate: 100%;
 }
@@ -163,6 +166,7 @@ header {
   font-family: var(--main-font);
 }
 
+/**
 nav ul {
   width: 100%;
   list-style: none;
@@ -187,6 +191,7 @@ nav a {
 nav a:hover {
   background-color: #f0f0f0;
 }
+**/
 
 .large-nav {
   display: none;
